# mocap-imesh-plugin

./: CMakeLists.txt
script/: install-requisites-ubuntu-20.04.sh  install-requisites-ubuntu-24.04.sh
src/: BodyIMesh.cpp  BodyIMesh.h  BodyIMeshItem.cpp  BodyIMeshItem.h  BodyIMeshSolver.cpp  BodyIMeshSolver.h  BodyIMeshSolverImpl.h  CMakeLists.txt  IMeshItem.cpp  IMeshItem.h  MarkerIMesh.cpp  MarkerIMesh.h  MarkerIMeshItem.cpp  MarkerIMeshItem.h  MarkerIMeshSolver.cpp  MarkerIMeshSolver.h  MocapIMeshPlugin.cpp  gettext.h
src/po/: ja.po
